# WeAreChecking-FastF1

./: Fast F1 Data analysis + Modelling.ipynb  LICENSE  README.md  best_lstm.pt  check_output.py  main.py  pyproject.toml  requirements.txt
.ipynb_checkpoints/: Untitled-Copy1-checkpoint.ipynb
data/processed/: all_laps_2024.feather
data/raw/: best_lap_telemetry_2024.feather
notebooks/: Fast F1 Data analysis + Modelling.ipynb
src/flin/: clean_features.py  etl-all.py  initial_eda.py  modelling.py  plotting.py  preprocess.py  viz_config.py  widgets.py
